5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_1801.log
== TEST (2019-04-06 22:46:20) 
-- CODE:
frase=Abra+nome_do_objeto
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    frase=Abra+nome_do_objeto
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:47:09) 
-- CODE:
frase=abra+nome_do_objeto
print(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    frase=abra+nome_do_objeto
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:49:20) 
-- CODE:
frase="Abra+nome_do_objeto"
print(frase*)
-- ERROR:
File "XXXX", line 2
    print(frase*)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:49:37) 
-- CODE:
frase="Abra+nome_do_objeto"
print(frase*)
-- ERROR:
File "XXXX", line 2
    print(frase*)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:50:52) 
-- CODE:
frase="Abra+porta"
print(frase*)
-- ERROR:
File "XXXX", line 2
    print(frase*)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:50:58) 
-- CODE:
frase="Abra+porta"
print(frase)
-- OUTPUT:
Abra+porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:51:51) 
-- CODE:
frase="Abra+porta"
print(frase)
-- EXECUTION TIME:
0.146864
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:53:27) 
-- CODE:
frase=Abra+nome_do_objeto""
print(frase)
-- ERROR:
File "XXXX", line 1
    frase=Abra+nome_do_objeto""
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:54:02) 
-- CODE:
frase=Abra+nome_do_objeto""
print(frase)
-- EXECUTION TIME:
0.202252
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 1
    frase=Abra+nome_do_objeto""
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:59:54) 
-- CODE:
frase=(Abra+nome_do_objeto)
print(frase*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    frase=(Abra+nome_do_objeto)
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:00:24) 
-- CODE:
frase=("Abra+nome_do_objeto")
print(frase*n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase*n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:01:54) 
-- CODE:
string=("Abra+nome_do_objeto")
print(string *)
-- ERROR:
File "XXXX", line 2
    print(string *)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:02:17) 
-- CODE:
string=("Abra+nome_do_objeto")
print(string)
-- OUTPUT:
Abra+nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 16:02:35) 
-- CODE:
string=("Abra+nome_do_objeto")
print(string)
-- EXECUTION TIME:
0.12704
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+nome_do_objeto
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+nome_do_objeto
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+nome_do_objeto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:03:21) 
-- CODE:
string=("Abra+nome_do_objeto")
print(string*4)
-- OUTPUT:
Abra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:03:41) 
-- CODE:
string=("Abra+nome_do_objeto")
print(string*4)
-- OUTPUT:
Abra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 16:03:56) 
-- CODE:
string=("Abra+nome_do_objeto")
print(string*4)
-- EXECUTION TIME:
0.180394
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objeto
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objeto
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objetoAbra+nome_do_objeto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:05:42) 
-- CODE:
string=("Abra+porta")
print(string*4)
-- OUTPUT:
Abra+portaAbra+portaAbra+portaAbra+porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 16:06:01) 
-- CODE:
string=("Abra+porta")
print(string*4)
-- EXECUTION TIME:
0.150627
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra+portaAbra+portaAbra+portaAbra+porta
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra+portaAbra+portaAbra+portaAbra+porta
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra+portaAbra+portaAbra+portaAbra+porta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:07:20) 
-- CODE:
string=("Abra+nome_do_objeto")
print(string''*4)
-- ERROR:
File "XXXX", line 2
    print(string''*4)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:57:55) 
-- CODE:
string=("Abra +* nome_do_objeto")
print(string)
-- OUTPUT:
Abra +* nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:58:05) 
-- CODE:
string=("Abra +* nome_do_objeto")
print(string)
-- EXECUTION TIME:
0.164317
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra +* nome_do_objeto
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra +* nome_do_objeto
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra +* nome_do_objeto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:58:30) 
-- CODE:
string=("Abra + nome_do_objeto")*
print(string)
-- ERROR:
File "XXXX", line 1
    string=("Abra + nome_do_objeto")*
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:58:50) 
-- CODE:
string=("Abra + nome_do_objeto")
print(string *)
-- ERROR:
File "XXXX", line 2
    print(string *)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:00:05) 
-- CODE:
string=("Abra + nome_do_objeto")
print(string "")
-- ERROR:
File "XXXX", line 2
    print(string "")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:00:40) 
-- CODE:
string=("Abra + nome_do_objeto")
print(string *4)
-- OUTPUT:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:00:50) 
-- CODE:
string=("Abra + nome_do_objeto")
print(string *4)
-- OUTPUT:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:00:57) 
-- CODE:
string=("Abra + nome_do_objeto")
print(string *4)
-- EXECUTION TIME:
0.17901
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:28:46) 
-- CODE:
a=input("Digite a string: ")
n=int(input("Repeticoes: "))
print(("Abra" + " " + a +" ")*n)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:29:14) 
-- CODE:
a=input("Digite a string: ")
n=int(input("Repeticoes: "))
print(("Abra" + " " + a +" ")*n)

-- EXECUTION TIME:
0.179728
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
